# discord-cpp-bot

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  rsa.cpp  snipe.cpp  wordle.cpp
src/dependencies/: wordle-allowed-guesses
src/dependencies/messages/: help
src/include/: rsa.h  snipe.h  wordle.h
